Restructured as a Tectonic project
Tectonic is now used as the default rendering engine, so I have
restructured the repository according to the Tectonic document
structure (https://tectonic-typesetting.github.io/book/latest/ref/documents.html).

- Source org files remain in the root directory
- Exported LaTeX files are written to src/
- Support LaTeX files (.sty, .cls, .bib, fonts) are also under src/
- Rendered outputs are written under build/
- Project configuration is in Tectonic.toml

--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -362,5 +362,5 @@ Full Curriculum Vitæ available at [[https://zzamboni.org/vita/][https://zzambon
 
 * Local Variables :ARCHIVE:noexport:
 # Local Variables:
-# eval: (add-hook 'after-save-hook (lambda () (org-export-to-file 'awesomecv "zamboni-resume.tex")) :append :local)
+# eval: (add-hook 'after-save-hook (lambda () (org-export-to-file 'awesomecv "src/zamboni-resume.tex")) :append :local)
 # End:
