--- a/zamboni-resume.org
+++ b/zamboni-resume.org
@@ -44,18 +44,19 @@
 
 :END:
 
+#+title: Senior Security Architect · Organizational Leader · Computer Scientist
 #+author: Diego Zamboni
-#+title: IT Enterprise Architect · Senior Engineering Leader · Computer Security Expert
 #+email: diego@zzamboni.org
-#+twitter: zzamboni
+# #+twitter: zzamboni
 #+linkedin: zzamboni
-#+gitlab: zzamboni
+#+leanpub: zzamboni
+# #+gitlab: zzamboni
 #+github: zzamboni
-#+stackoverflow: 5562 zzamboni
+# #+stackoverflow: 5562 zzamboni
 #+homepage: zzamboni.org
 
 #+latex: \begin{cvparagraph}
-I am an IT Enterprise Architect, Senior Engineering Manager and Researcher with 30 years of experience building systems and leading teams in startups as well as big companies. I specialize in the areas of Computer Security, Cloud Computing and Configuration Management. I have experience working with and leading remote teams. I possess a strong combination of leadership, conceptual and technical skills with excellent communication abilities.
+I am a Senior Enterprise Security Architect, Organizational Leader and Computer Scientist with 32 years of experience building systems and leading teams and projects. I specialize in the areas of Computer Security, Cloud Computing and Configuration Management. I have experience working with and leading remote teams. I possess a strong combination of leadership, conceptual and technical skills with excellent communication abilities.
 #+latex: \end{cvparagraph}
 
 * Including private information :noexport:
@@ -71,7 +72,7 @@ The "Private info" section contains private information which should not be incl
 When encrypted, this information is simply ignored. When I want to produce a version of my resume which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file* (since then the section gets automatically re-encrypted), I run the following export command (just place cursor at the end of the line and press =C-x C-e=:
 
 #+begin_src emacs-lisp
-(org-export-to-file 'awesomecv "zamboni-resume-private.tex")
+(org-export-to-file 'awesomecv "src/zamboni-resume-private.tex")
 #+end_src
 
 ** Private info :crypt:
@@ -95,6 +96,7 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - [[#key-skills][Key skills]]
 - [[#experience][Experience]]
   - [[#amazon-web-services][Amazon Web Services]]
+    - [[#senior-global-security-architect][Senior Global Security Architect]]
     - [[#global-security-architect][Global Security Architect]]
   - [[#swisscom][Swisscom]]
     - [[#enterprise-architect-and-it-clouds-solution-security-architect][Enterprise Architect and IT Clouds Solution Security Architect]]
@@ -110,12 +112,6 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 - [[#education][Education]]
   - [[#phd-in-computer-science-purdue-university][Ph.D. in Computer Science, Purdue University]]
 - [[#certifications][Certifications]]
-  - [[#aws-certified-solutions-architect--professional][AWS Certified Solutions Architect – Professional]]
-  - [[#aws-certified-solutions-architect--associate][AWS Certified Solutions Architect – Associate]]
-  - [[#aws-certified-security--specialty][AWS Certified Security – Specialty]]
-  - [[#aws-certified-sysops-administrator--associate][AWS Certified SysOps Administrator – Associate]]
-  - [[#certified-information-systems-security-professional-cissp][Certified Information Systems Security Professional (CISSP)]]
-  - [[#certified-safe-5-agilist][Certified SAFe® 5 Agilist]]
 - [[#research-publications-teaching-and-references][Research, Publications, Teaching and References]]
 
 * Key skills
@@ -123,12 +119,15 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :CV_ENV:   cvskills
 :END:
 
-- Leadership :: IT Systems and Software Architecture, Engineering Leadership.
-- Computer Security :: Security architecture, risk management and compliance; secure software development; virtualization and cloud computing security; intrusion detection and prevention; operating system and network security.
-- Communications and Research :: Excellent written and spoken communication skills, with more than 30 years of written and spoken communication, research and teaching experience.
-- Systems and Development :: Unix/Linux systems engineering and administration, system health management and monitoring, cloud platforms (Amazon, Cloud Foundry, VMware), software development experience (Ruby, Python, C, Perl, LISP, etc.).
-- Configuration Management :: CFEngine, Ansible, Puppet.
+- Leadership :: 32 years of team and project leadership experience; IT Enterprise Architecture.
+- Computer Security :: Enterprise security architecture; virtualization and cloud computing security; risk management and compliance; intrusion detection and prevention; software security and secure software development.
+- Cloud Computing :: AWS architecture, infrastructure, development and security.
+- Communications and Research :: Excellent written and spoken communication skills;  research and teaching experience.
+- Research :: Ph.D. in Computer Science, 9 years of experience at IBM Research.
 - Languages :: Spanish (native), English (100%), German (B1 level).
+
+# - Configuration Management :: CFEngine, Ansible, Puppet.
+# - Systems and Development :: Unix/Linux systems engineering and administration, system health management and monitoring, cloud platforms (Amazon, Cloud Foundry, VMware), software development experience (Ruby, Python, C, Perl, LISP, etc.).
 
 * Experience
 :PROPERTIES:
@@ -142,13 +141,28 @@ f/yLKNfJQJz6Y3WA/L6QqNVO
 :FROM: 2021
 :END:
 
+*** Senior Global Security Architect
+:PROPERTIES:
+:CV_ENV:   cvsubentry
+:FROM: <2021-10-01>
+:END:
+
+- I work with customers and within AWS to increase security awareness, design and build secure solutions, mentor and develop colleagues and customers in security best practices.
+- As Lead Security Architect at the [[https://www.stellantis.com/en/news/press-releases/2022/january/amazon-stellantis-collaborate-on-software-solutions][Stellantis /Virtual Engineering Workbench/]] (VEW) project, I have:
+  - Established the VEW security workstream, define and promote security best practices and drive activities related to risk analysis, threat modeling and mitigation.
+  - Established measurement mechanisms for status and metrics for security activities, which provide visibility to both technical and business stakeholders.
+  - Established a /Security Champions/ program to promote and transfer security knowledge.
+  - Define and track security features to fulfill customer business requirements and AWS best practices.
+
 *** Global Security Architect
 :PROPERTIES:
 :CV_ENV:   cvsubentry
 :FROM: <2021-09-01>
+:TO: <2022-09-30>
 :END:
 
-I design and build highly secure cloud solutions for AWS Global accounts.
+- Worked with AWS global customers to improve security posture and promote secure design and implementation practices.
+- In the [[https://aws.amazon.com/solutions/case-studies/innovators/volkswagen-group/][Volkswagen Digital Production Platform (DPP)]] program, I established scalable and durable mechanisms to enable DPP partners to work securely in the DPP program. I also created and promoted security learning materials tailored for various roles within the project, and increased security awareness and knowledge by promoting a /Security Guardians/ initiative across the organization.
 
 ** [[https://www.swisscom.com/][Swisscom]]
 :PROPERTIES:
@@ -194,7 +208,6 @@ I design and build highly secure cloud solutions for AWS Global accounts.
 :LOCATION: Norway/U.S.A. (remote)
 :FROM:     2011
 :TO:       2014
-:PAGEBREAK: yes
 :END:
 
 *** Senior Security Advisor and Product Manager
@@ -311,53 +324,19 @@ I design and build highly secure cloud solutions for AWS Global accounts.
 
 * Certifications
 :PROPERTIES:
+:CUSTOM_ID: certifications
 :CV_ENV:   cventries
 :END:
 
-** [[https://www.credly.com/badges/5f462d17-402c-44b8-a8f9-80187ad0d7a1/public_url][AWS Certified Solutions Architect – Professional]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: December 2021
-:END:
-
-** [[https://www.credly.com/badges/3fe94170-f19a-4552-95a8-ea6b13a7586e/public_url][AWS Certified Solutions Architect – Associate]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: October 2021
-:END:
-
-** [[https://www.credly.com/badges/630be29b-36d2-4d90-a5ff-22745355a06d/public_url][AWS Certified Security – Specialty]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: October 2021
-:END:
-
-** [[https://www.credly.com/badges/7200e54c-efe5-407a-a632-b8731c9f870a/public_url][AWS Certified SysOps Administrator – Associate]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: February 2022
-:END:
-
-** [[https://www.youracclaim.com/badges/98814af3-575b-4350-9667-70eddfea1da4/public_url][Certified Information Systems Security Professional (CISSP)]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: April 2019
-:END:
-
-** [[https://www.credly.com/badges/88eb9455-fffa-4798-804c-b22b7c1f9534/public_url][Certified SAFe® 5 Agilist]]
-:PROPERTIES:
-:CV_ENV:   cvsubentry
-:DATE: November 2021
-:END:
+#+attr_latex: :width 40pt :center nil
+[[file:images/aws-certified-solutions-architect-professional-small.png]] [[file:images/aws-certified-devops-engineer-professional-small.png]] [[file:images/aws-certified-security-specialty-small.png]] [[file:images/aws-certified-solutions-architect-associate-small.png]] [[file:images/aws-certified-sysops-administrator-associate-small.png]] [[file:images/aws-certified-developer-associate-small.png]] [[file:images/certified-information-systems-security-professional-cissp-small.png]] [[file:images/certified-safe-5-agilist-small.png]] [[file:images/certified-safe-5-advanced-scrum-master-small.png]]
 
 * Research, Publications, Teaching and References
 
 #+latex: \begin{cvparagraph}
-Books:  [[http://cf-learn.info/][Learning CFEngine]] (2012),  [[https://leanpub.com/learning-hammerspoon][Learning Hammerspoon]] (2018),  [[https://leanpub.com/lit-config][Literate Configuration]] (2019)
+Books:  [[http://cf-learn.info/][Learning CFEngine]] (2012),  [[https://leanpub.com/learning-hammerspoon][Learning Hammerspoon]] (2018),  [[https://leanpub.com/lit-config][Literate Configuration]] (2019), [[https://leanpub.com/emacs-org-leanpub][Publishing with Emacs, Org-mode and Leanpub]] (2021).
 
-References available upon request.
-
-Full Curriculum Vitæ available at [[https://zzamboni.org/vita/][https://zzamboni.org/vita/]].
+References available upon request. Full Curriculum Vitæ available at [[https://zzamboni.org/vita/][https://zzamboni.org/vita/]].
 #+latex: \end{cvparagraph}
 
 * Local Variables :ARCHIVE:noexport:
